# krystal-palace-hotel

./: .gitignore  Procfile  README.md  pyproject.toml  render.yaml
krystal_palace/: .env.example  __init__.py  api_tests.http  main.py  requirements.txt
krystal_palace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
krystal_palace/database/: create_database_postgresql.sql
krystal_palace/docs/: .$architecture_drawio.png.bkp  .$architecture_drawio.xml.bkp  .$uml_activite_drawio.xml.bkp  .$uml_classes_drawio.xml.dtmp  GUIDE_RECONSTRUCTION_v7.md  architecture_drawio.xml  diagrammes_plantuml.puml  uml_activite_drawio.xml  uml_cas_utilisation_drawio.xml  uml_classes_drawio.xml
krystal_palace/gateway/: __init__.py  bacnet_client.py  config.py  main.py  requirements_gateway.txt  scheduler.py
krystal_palace/templates/: admin.html  client.html
